# fpx-monorepo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  architecture.plantuml  handler.py  imagedefinitions.json  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  task-definition-fastapi.json  task-definition.json
geo-api/: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  backend.dockerfile  base-backend.dockerfile  base-worker.dockerfile  build-push-base-images.sh  build.sh  celeryworker.dockerfile  conftest.py  deploy.sh  docker-compose.yml  docker-test-stack.yml  imagedefinitions.json  main.py  oas.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.sh  serverless.yml  test_collections.py  test_items.py  uwsgi.ini  worker.dockerfile
geo-api-fastapi/app/: .flake8  mypy.ini  newrelic.ini  pyproject.toml  start.sh
geo-api-fastapi/app/alembic/: env.py
geo-api-fastapi/app/alembic/versions/: 0d059bac5d15_initial_migration.py  127e35875881_add_acl.py  302c23c2932d_remove_provider_uuid_from_items.py  3bc1f1d70aca_seed_items.py
geo-api-fastapi/app/app/: backend_pre_start.py  celeryworker_pre_start.py  dev_server.py  main.py  patch.py
geo-api-fastapi/app/app/api/: deps.py
geo-api-fastapi/app/app/api/api_v1/: api.py
geo-api-fastapi/app/app/core/: celery_app.py  config.py
geo-api-fastapi/app/app/crud/: base.py  crud_user.py
geo-api-fastapi/app/app/db/: base.py  init_db.py  session.py
geo-api-fastapi/app/app/dto/: __init__.py
geo-api-fastapi/app/app/errors/: __init__.py
geo-api-fastapi/app/app/models/: __init__.py  acl.py  base_model.py  collection.py  item.py  provider.py  user.py
geo-api-fastapi/app/app/schemas/: __init__.py  acl.py  collection.py  item.py  provider.py  user.py
geo-api-fastapi/app/app/services/: __init__.py  acl.py  collection.py  item.py  provider.py  session.py  shapefile.py  user.py
geo-api-fastapi/app/app/tests/: conftest.py
geo-api-fastapi/app/app/tests/services/: test_item.py  test_user.py
geo-api-fastapi/app/app/tests/utils/: item.py  user.py
geo-api-fastapi/app/lib/visualizer/: geo_types.py  renderer.py  stitcher.py
geo-api-fastapi/app/scripts/: lint.sh
geo-api-rs/: Cargo.toml  package-lock.json  package.json  serverless.yml
geo-api-rs/src/: config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs  services.rs  store.rs  utils.rs
geo-api/app/: .flake8  __init__.py  config.py  mypy.ini  pyproject.toml  start-reload.sh
geo-api/app/alembic/: env.py
geo-api/app/alembic/versions/: 0ce71f5f1e16_add_timeseries_and_metrics.py  0d059bac5d15_initial_migration.py  127e35875881_add_acl.py  302c23c2932d_remove_provider_uuid_from_items.py  3bc1f1d70aca_seed_items.py  4ba7b628888b_delete_cascade.py  cb23a78d2118_add_timeseries_and_metrics.py
geo-api/app/app/: geojson.yaml  initial_data.py  main.py  utils.py
geo-api/app/app/api/: deps.py
geo-api/app/app/api/api_v1/: api.py
geo-api/app/app/core/: config.py
geo-api/app/app/db/: init_db.py
geo-api/app/app/dto/: __init__.py
geo-api/app/app/email-templates/src/: new_account.mjml  reset_password.mjml
geo-api/app/app/models/: __init__.py  base_model.py  collection.py  item.py  metric.py  provider.py  series.py  timeseries.py  user.py
geo-api/app/app/schemas/: __init__.py  item.py  metric.py  series.py  session.py
geo-api/app/app/services/: __init__.py  collection.py  item.py  metric.py  series.py  session.py  shapefile.py  user.py  zip.py
geo-api/app/app/tests/: conftest.py
geo-api/app/app/tests/services/: test_user.py
geo-api/app/assets/ml_models/: sensor_16.h5  sensor_21.h5  sensor_31.h5  sensor_36.h5  sensor_6.h5
geo-api/app/assets/scalers/: all_features.joblib  sensor_126.joblib  sensor_130.joblib  sensor_134.joblib  sensor_16.joblib  sensor_191.joblib  sensor_21.joblib  sensor_241.joblib  sensor_26.joblib  sensor_31.joblib  sensor_36.joblib  sensor_56.joblib  sensor_6.joblib
geo-api/app/data/: feature_collection.json  obstacles.json  sensors.json
geo-api/app/dto/: __init__.py
geo-api/app/handlers/: __init__.py  authorizer.py  geo_collections.py  geo_items.py  geo_providers.py  geo_sessions.py  geo_users.py  handler.py
geo-api/app/handlers/flask/: __init__.py  geo_acls.py  geo_collections.py  geo_items.py  geo_providers.py  geo_sessions.py  geo_users.py  handler.py
geo-api/app/lib/visualizer/: geo_types.py  renderer.py  stitcher.py
geo-api/app/models/: __init__.py  base_model.py  collection.py  item.py  provider.py  user.py
geo-api/app/models/ai/: polygon_environment.py  walking_agent.py
geo-api/app/services/: acl.py  ai.py  collection.py  item.py  provider.py  session.py  user.py
geo-api/app/stores/: __init__.py  base_store.py  collection.py  item.py  provider.py  user.py
geo-api/data/: feature_collection.json  obstacles.json  sensors.json
geo-api/lib/visualizer/: renderer.py  stitcher.py
geo-api/migrations/: env.py
geo-api/migrations/versions/: 0d059bac5d15_initial_migration.py  127e35875881_add_acl.py  302c23c2932d_remove_provider_uuid_from_items.py  388e2e096ec8_.py  3bc1f1d70aca_seed_items.py  65f4e9de7cc2_initial_migration.py  9ef6c7c73667_add_acl.py  a901cacd4b17_.py  f58a810acd6f_initial_migration.py
geo-api/serverless/config/: dev.yml
geo-api/serverless/documentation/: api.yml  methodResponses.yml  models.yml  pathParams.yml  queryParams.yml
geo-api/serverless/functions/: collections.yml  items.yml  misc.yml  providers.yml  sessions.yml  users.yml
geo-api/serverless/resources/: gatewayResponses.yml
geo-api/static/: index.css  index.html
geo-api/static/docs/: index.html
geo-api/static/swagger/: index.html
geo-api/tests/: test_acls.py  test_collections.py  test_handler.py  test_items.py  test_providers.py  test_sessions.py  test_users.py
geo-api/tests/services/: test_item.py
(+108 files in other folders)
