[tool.poetry]
name = "fpx-monorepo"
version = "0.1.0"
description = "Dependencies for pre-commit"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy-stubs = "^0.3"
mypy = "^0.770"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
