[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_runtime = "0.2"
lambda_http = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "0.8"
postgres = { version = "0.17.3", features = ["with-serde_json-1", "with-uuid-0_8"] }
postgis = "0.7.0"

#geo = {version = "0.13.0", features = ["postgis-integration"]}
#geo-types = { version = "0.5.0" }
#geojson = { version = "0.18.0", features = ["geo-types"] }

geo-postgis = { git = "https://github.com/georust/geo" }
geo-types = { git = "https://github.com/georust/geo" }
geojson = { git = "https://github.com/triptec/geojson", features = ["geo-types"] }