[package]
name = "geo-api-rs"
version = "0.1.0"
authors = ["fpx"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4", "serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = { version = "0.5.4", features = ["with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"]}
chrono = { version = "0.4.11", features = ["serde"] }
env_logger = "0.7.1"
lazy_static = "1.4.0"

postgis = "0.7.0"

geo-types = "0.6.0"
geo-postgis = "0.1.0"
geojson = { version = "0.19.0", features = ["geo-types"]}
bytes = "0.5.5"
mime = "0.3.16"

bcrypt = "0.8.1"
jsonwebtoken = "7.2.0"
futures = "0.3.5"
#geo-postgis = { git = "https://github.com/georust/geo" }
#geo-types = { git = "https://github.com/georust/geo" }
#geojson = { git = "https://github.com/triptec/geojson", features = ["geo-types"] }
#geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }