[tool.poetry]
name = "geo-api"
version = "0.1.0"
description = ""
authors = ["Andreas Franzén <andreas@devil.se>"]

[tool.poetry.dependencies]
python = "^3.8.6"
mypy = "^0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
