[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
#fastapi = "^0.61.1"
#fastapi = { path = "./fastapi/dist/fastapi-0.61.1.tar.gz", develop = true }
#fastapi = { git = "https://github.com/Future-Position-X/fastapi", develop = false}
fastapi = { url = "https://github.com/Future-Position-X/fastapi/archive/master.zip" }
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.4"
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
GeoAlchemy2 = "^0.8.4"
sqlalchemy_mixins = "^1.2.1"
SQLAlchemy-Utils = "0.36.7"
Shapely = "^1.7.0"
shapely-geojson = "^0.0.1"
geojson-pydantic = { git = "https://github.com/Future-Position-X/geojson-pydantic.git", rev = "8b80512a131f20b1b3bcc5c690be8a0bee946c42"}
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
Pillow = "^7.1.2"
python-magic = "^0.4.18"
fastapi-utils = "^0.2.1"
deepmerge = "^0.1.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^5.5.3"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
